# pulsedb

./: .gitignore  Cargo.toml  PULSE_LANG_SPEC.md  PULSE_UI_SPEC.md  README.md  SPEC.md  UI_SPEC.md  WIKI.md  demo.tape  dev.sh
benches/: compression.rs  ingestion.rs  lang.rs  query.rs
demo/: README.md  market-feed.mjs  package-lock.json  record-demo.mjs
src/: lib.rs  main.rs
src/cli/: mod.rs  repl.rs
src/encoding/: boolean.rs  float.rs  integer.rs  mod.rs  timestamp.rs
src/engine/: config.rs  database.rs  memtable.rs  mod.rs  wal.rs
src/index/: inverted.rs  mod.rs  series.rs
src/lang/: ast.rs  db.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs  value.rs
src/model/: mod.rs  point.rs  schema.rs  series.rs
src/python/: bridge.rs  mod.rs
src/query/: aggregator.rs  ast.rs  executor.rs  lexer.rs  mod.rs  parser.rs  planner.rs
src/server/: http.rs  mod.rs  protocol.rs  tcp.rs
src/storage/: cache.rs  compactor.rs  mod.rs  partition.rs  retention.rs  segment.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx
ui/src/api/: client.ts  types.ts  websocket.ts
ui/src/components/: DataTable.tsx  ErrorBoundary.tsx  Panel.tsx  PanelGrid.tsx  PythonOutput.tsx  QueryEditor.tsx  ScalarCard.tsx  TimeSeriesChart.tsx  TopBar.tsx
ui/src/hooks/: useQuery.ts  useWebSocket.ts
ui/src/stores/: connection.ts  dashboard.ts
ui/src/styles/: globals.css
