[package]
name = "pulsedb"
version = "0.1.0"
edition = "2021"
description = "A high-performance time-series database written in Rust"
license = "MIT"
repository = "https://github.com/matthart1983/pulsedb"

[dependencies]
bytes = "1"
crc32fast = "1"
crossbeam-channel = "0.5"
memmap2 = "0.9"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
lz4_flex = "0.11"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
rand = "0.8"

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "query"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
